# wgpu-demo

./: Cargo.toml
src/: bind_groups.rs  camera.rs  graphics_context.rs  instance.rs  light.rs  main.rs  render_pass.rs  resources.rs  shader.wgsl  texture.rs  vertex.rs  window.rs
src/camera/: camera_controller.rs  mod.rs
src/object/: mod.rs  model.rs  model_vertex.rs
