[package]
name = "wgpu-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version="1.13.1", features=["derive"]}
pollster = "0.3.0"
wgpu = "0.16.0"
winit = "0.28.5"
image = {version="0.24", default-features=false, features=["png", "jpeg"]}
cgmath = "0.18.0"
tobj = {version="4.0.0", features = ["async"]}
anyhow = "1.0.71"

[build-dependencies]
anyhow = "1.0.71"
fs_extra = "1.3.0"
glob = "0.3.1"
